--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "editor.tabSize": 2,
   "workbench.colorCustomizations": {
     "activityBar.background": "#2f7c47",
+    "activityBar.activeBorder": "#422c74",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
     "activityBarBadge.background": "#422c74",
