[15/5/2020][React native practical guide] notes, guess the number screens, custom font loadinng

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "statusBar.border": "#215732",
     "titleBar.border": "#215732"
   },
-  "peacock.color": "#215732"
+  "peacock.color": "#215732",
+  "editor.fontLigatures": null
 }
