--- a/may-2020/tailwind_css/rt-workcation/package.json
+++ b/may-2020/tailwind_css/rt-workcation/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9.8.0",
+    "loadash": "^1.0.0",
     "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
